--- a/KiteSpots.Client/appsettings.json
+++ b/KiteSpots.Client/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KiteSpotsApiBaseAdress": "https://localhost:7083/"
 }
