--- a/KiteSpots.Client/appsettings.json
+++ b/KiteSpots.Client/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-KiteSpots.Client-ffda7354-b8a9-468f-ad41-58432e9004fa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=KiteSpotIdentityDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
